# yolo

./: .gitignore  README.md  SigLIP.py  check_env.py  export.py  predict.py  pyproject.toml  qdrant.py  requirements.txt  sku-110k.pt  train.py  yolo.py  yolo11l-cls.pt  yolo11m_110k.pt  yolo11x-cls.pt  yolo26n-obb.pt  yolo26x-obb.pt
.github/: copilot-instructions.md
config/: train_config.yaml
