[project]
name = "yolo"
version = "0.1.0"
description = "YOLO SKU-110K training and CoreML export"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.3.0",
    "coremltools>=8.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.19.0",
    "numpy>=1.26.0",
    "polars>=0.20.0",
    "pillow>=10.4.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
]

[tool.uv]
# 可选日志/追踪依赖，按需启用
# dev-dependencies = ["tensorboard>=2.16.0", "wandb>=0.18.0", "mlflow>=2.14.0"]
