[project]
name = "yolo"
version = "0.1.0"
description = "YOLO SKU-110K training and CoreML export"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ultralytics>=8.3.0",
    "coremltools>=8.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.19.0",
    "numpy>=1.26.0",
    "polars>=0.20.0",
    "pillow>=10.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "transformers>=5.5.0",
    "sentencepiece>=0.2.1",
    "qdrant-client>=1.17.1",
    "socksio>=1.0.0",
    "clip",
    "torch>=2.3.0",
    "torchaudio>=2.5.1",
    "torchvision>=0.18.0",
    "nvidia-cudnn-cu12>=9.1.0.70",
    "nvidia-nccl-cu12>=2.21.5",
    "nvidia-cusolver-cu12>=11.4.5.107",
    "nvidia-cublas-cu12>=12.1.3.1",
]

[tool.uv]

[tool.uv.sources]
clip = { git = "https://github.com/ultralytics/CLIP.git", branch = "main" }
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
nvidia-cudnn-cu12 = { index = "pytorch-cu121" }
nvidia-nccl-cu12 = { index = "pytorch-cu121" }
nvidia-cusolver-cu12 = { index = "pytorch-cu121" }
nvidia-cublas-cu12 = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

# 可选日志/追踪依赖，按需启用
# dev-dependencies = ["tensorboard>=2.16.0", "wandb>=0.18.0", "mlflow>=2.14.0"]
